[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Environment/BounceBackTile/BounceBackTile.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Environment/BounceBackTile/BounceBackTile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.0
height = 8.0

[sub_resource type="Animation" id=7]
resource_name = "Activated"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 0, 1, 0, 2, 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[node name="BounceBackTile" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 3
frame = 1

[node name="BouncBackArea" type="Area2D" parent="."]
position = Vector2( 9, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BouncBackArea"]
position = Vector2( 0, -8 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Activated = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/RESET = SubResource( 9 )

[connection signal="body_entered" from="BouncBackArea" to="." method="_on_BouncBackArea_body_entered"]
